# cuda

./: .appveyor.yml  .gitignore  .mailmap  .travis.yml  CHANGELOG.markdown  CHANGELOG.md  LICENSE  README  README.markdown  README.md  Setup.hs  WINDOWS.md  cabal.project  changelog.md  configure  configure.ac  cuda.buildinfo.in  cuda.cabal  shell.nix  stack-7.10.yaml  stack-7.8.yaml  stack-8.0.yaml  stack-8.10.yaml  stack-8.2.yaml  stack-8.4.yaml  stack-8.6.yaml  stack-8.8.yaml  stack-9.0.yaml  stack-9.10.yaml  stack-9.2.yaml  stack-9.4.yaml  stack-9.6.yaml  stack-9.8.yaml
.github/workflows/: ci-linux.yml  ci.yml
Foreign/: CUDA.hs
Foreign/CUDA/: Analysis.hs  Array.chs  Array.hs  C2HS.hs  Device.chs  DevicePtr.chs  Driver.hs  Error.chs  Marshal.chs  Marshal.hs  Ptr.hs  Runtime.chs  Runtime.hs  Stream.chs  Thread.chs  Types.chs  Utils.chs
Foreign/CUDA/Analysis/: Device.chs  Occupancy.hs
Foreign/CUDA/Driver/: Context.chs  Context.hs  Device.chs  Error.chs  Event.chs  Exec.chs  IPC.hs  Marshal.chs  Module.chs  Module.hs  Peer.chs  Profiler.chs  Ptr.chs  Stream.chs  Texture.chs  Utils.chs
Foreign/CUDA/Driver/Context/: Base.chs  Config.chs  Primary.chs
Foreign/CUDA/Driver/IPC/: Event.chs  Marshal.chs
Foreign/CUDA/Driver/Module/: Base.chs  Link.chs
Foreign/CUDA/Internal/: C2HS.hs  Offsets.hsc
Foreign/CUDA/Marshal/: Alloc.chs  Array.hs
Foreign/CUDA/Runtime/: Device.chs  DevicePtr.chs  DevicePtr.hs  Error.chs  Event.chs  Exec.chs  Marshal.chs  Marshal.hs  Ptr.hs  Stream.chs  Texture.chs  Thread.chs  Utils.chs
Foreign/CUDA/Runtime/Marshal/: Alloc.chs  Array.hs
cbits/: init.c  stubs.c  stubs.h
cuda/: CHANGELOG.md  README.md  Setup.hs  cuda.cabal
cuda-runtime/: Setup.hs  cuda-runtime.cabal
cuda-runtime/cbits/: stubs.c  stubs.h
cuda-runtime/src/Foreign/CUDA/Runtime/: Device.chs  Error.chs  Exec.chs  Stream.chs  Utils.chs
cuda/cbits/: stubs.c  stubs.h
cuda/cbits/compat/: cuda_c2hs_compat.h
cuda/examples/common/include/: operator.h
cuda/examples/common/include/cudpp/: cudpp_globals.h  shared_mem.h
cuda/examples/common/src/cudpp/: scan_kernel.cu
cuda/examples/src/bandwidthTest/results/: Bandwidth.numbers
cuda/examples/src/deviceQueryDrv/: DeviceQuery.hs
cuda/examples/src/fold/: Fold.chs  Makefile  fold.cu
cuda/examples/src/foldSeg/: foldSeg.cu  foldSeg.h
cuda/examples/src/matrixMul/: Makefile  MatrixMul.hs
cuda/examples/src/matrixMulDrv/: LICENSE  Makefile  MatrixMul.hs
cuda/examples/src/multiGPU/: multiGPU.hs  simpleMultiGPU.h
cuda/examples/src/replicate/: Makefile  replicate.cu  replicate.h
cuda/examples/src/scan/: Makefile  Scan.chs  scan.h
cuda/examples/src/simpleTexture/: SimpleTexture.hs
cuda/examples/src/smvm/: SMVM.chs  smvm-csr.cu
cuda/examples/src/sort/: Makefile  sort.h
cuda/examples/src/vectorAddDrv/: vector_add.cu
cuda/examples/src/zipWith/: zipWith.cu
cuda/src/Foreign/CUDA/: Analysis.hs  Driver.hs  Ptr.hs
cuda/src/Foreign/CUDA/Analysis/: Device.chs
cuda/src/Foreign/CUDA/Driver/: Device.chs  Error.chs  Event.chs  Marshal.chs  Stream.chs
cuda/src/Foreign/CUDA/Driver/Context/: Base.chs  Config.chs  Peer.chs
cuda/src/Foreign/CUDA/Driver/Graph/: Build.chs  Capture.chs  Exec.chs
cuda/src/Foreign/CUDA/Driver/Module/: Base.chs  Query.chs
cuda/src/Foreign/CUDA/Internal/: C2HS.hs  Describe.hs
examples/: Makefile  common.mk
examples/common/: common.mk
examples/common/include/: utils.h
examples/common/include/cudpp/: type_vector.h
examples/common/src/: Array.hs  C2HS.hs  PrettyPrint.hs  RandomVector.hs  Time.hs  control.cpp
examples/common/src/cudpp/: LICENSE  scan_cta.cu  segmented_scan_cta.cu  segmented_scan_kernel.cu  vector_kernel.cu
examples/driver/vectorAdd/: VectorAdd.cu  vectorAdd.hs  zipWithPlus.cu
examples/src/bandwidthTest/: BandwidthTest.hs  Makefile
examples/src/deviceQueryDrv/: DeviceQuery.hs
examples/src/enum/: Makefile  enum.cu  enum.h
examples/src/fold/: Fold.chs  Makefile  fold.h
examples/src/map2/: Makefile  Map.hs  map.cu
examples/src/matrixMul/: Makefile  MatrixMul.hs
examples/src/matrixMulDrv/: Makefile  MatrixMul.cu  MatrixMul.hs  matrix_mul.cu  matrix_mul.h
examples/src/multiGPU/: Makefile  simpleMultiGPU_kernel.cu
examples/src/permute/: permute.cu
examples/src/scan/: Makefile  Scan.chs  scan.cu
examples/src/simpleTexture/: Makefile  simpleTexture.cu
examples/src/smvm/: Makefile  SMVM.chs  smvm-csr.cu  smvm-cudpp.cu  smvm.h  texture.h
examples/src/sort/: Sort.chs  radix_sort.cu
examples/src/vectorAddDrv/: Makefile  VectorAdd.hs
src/Foreign/: CUDA.hs
src/Foreign/C/: Extra.hs
src/Foreign/CUDA/: Analysis.hs  Driver.hs  Path.chs  Ptr.hs  Runtime.hs  Types.chs
src/Foreign/CUDA/Analysis/: Device.chs  Occupancy.hs
src/Foreign/CUDA/Driver/: Context.hs  Device.chs  Error.chs  Event.chs  Exec.chs  Marshal.chs  Module.hs  Profiler.chs  Stream.chs  Texture.chs  Unified.chs  Utils.chs
src/Foreign/CUDA/Driver/Context/: Base.chs  Config.chs  Peer.chs  Primary.chs
src/Foreign/CUDA/Driver/Graph/: Base.chs  Build.chs  Capture.chs  Exec.chs
src/Foreign/CUDA/Driver/IPC/: Event.chs  Marshal.chs
src/Foreign/CUDA/Driver/Module/: Base.chs  Link.chs  Query.chs
src/Foreign/CUDA/Internal/: C2HS.hs
src/Foreign/CUDA/Runtime/: Device.chs  Error.chs  Event.chs  Exec.chs  Marshal.chs  Stream.chs  Texture.chs  Utils.chs
src/Text/Show/: Describe.hs
tests/: common.mk  device_prop.c
tests/scan/: Main.chs  Makefile  kernels.h  scan_kernel.cu  stubs.h
tests/scan-small/: Makefile
tests/scan-small/src/: Main.chs  stubs.h
