Name:                   cuda
Version:                0.4.0.2
Synopsis:               FFI binding to the CUDA interface for programming NVIDIA GPUs
Description:
    The CUDA library provides a direct, general purpose C-like SPMD programming
    model for NVIDIA graphics cards (G8x series onwards). This is a collection
    of bindings to allow you to call and control, although not write, such
    functions from Haskell-land. You will need to install the CUDA driver and
    developer toolkit.
    .
    <http://developer.nvidia.com/cuda-downloads>
    .
    The configure script will look for your CUDA installation in the standard
    places, and if the nvcc compiler is found in your PATH, relative to that.
    .
    This release is for version 4.0 of the CUDA toolkit.

License:                BSD3
License-file:           LICENSE
Copyright:              Copyright (c) [2009..2011]. Trevor L. McDonell <tmcdonell@cse.unsw.edu.au>
Author:                 Trevor L. McDonell <tmcdonell@cse.unsw.edu.au>
Maintainer:             Trevor L. McDonell <tmcdonell@cse.unsw.edu.au>
Category:               Foreign
Cabal-version:          >=1.6
Tested-with:            GHC >= 6.12

Build-type:             Custom
Extra-tmp-files:        cuda.buildinfo config.status config.log
Extra-source-files:     configure
                        configure.ac
                        config.guess
                        config.sub
                        install-sh
                        cuda.buildinfo.in
                        cbits/stubs.h

Library
  Exposed-Modules:      Foreign.CUDA
                        Foreign.CUDA.Ptr
                        Foreign.CUDA.Analysis
                        Foreign.CUDA.Analysis.Device
                        Foreign.CUDA.Analysis.Occupancy
                        Foreign.CUDA.Runtime
                        Foreign.CUDA.Runtime.Device
                        Foreign.CUDA.Runtime.Error
                        Foreign.CUDA.Runtime.Event
                        Foreign.CUDA.Runtime.Exec
                        Foreign.CUDA.Runtime.Marshal
                        Foreign.CUDA.Runtime.Stream
                        Foreign.CUDA.Runtime.Texture
                        Foreign.CUDA.Runtime.Utils
                        Foreign.CUDA.Driver
                        Foreign.CUDA.Driver.Context
                        Foreign.CUDA.Driver.Device
                        Foreign.CUDA.Driver.Error
                        Foreign.CUDA.Driver.Event
                        Foreign.CUDA.Driver.Exec
                        Foreign.CUDA.Driver.Marshal
                        Foreign.CUDA.Driver.Module
                        Foreign.CUDA.Driver.Stream
                        Foreign.CUDA.Driver.Texture
                        Foreign.CUDA.Driver.Utils

  Other-modules:        Foreign.CUDA.Internal.C2HS
                        Foreign.CUDA.Internal.Offsets

  Include-dirs:         .
  C-sources:            cbits/stubs.c

  Build-tools:          c2hs >= 0.16, hsc2hs
  Build-depends:        base >= 3 && < 5, bytestring, extensible-exceptions
  Extensions:
  ghc-options:          -Wall -O2


source-repository head
    type:               git
    location:           https://github.com/tmcdonell/cuda

