cabal-version:          1.24

Name:                   cuda-runtime
Version:                0.13.0.0
Synopsis:               FFI binding to the CUDA runtime interface for programming NVIDIA GPUs
Description:
    Extension of the @cuda@ package to the CUDA runtime API. This is code that
    was in the @cuda@ package originally but suffered from being unmaintained.
    It is now housed in this separate package.

License:                BSD3
License-file:           LICENSE
Copyright:              Copyright (c) [2009..2023]. Trevor L. McDonell <trevor.mcdonell@gmail.com>
Author:                 Trevor L. McDonell <trevor.mcdonell@gmail.com>
Maintainer:             Trevor L. McDonell <trevor.mcdonell@gmail.com>,
                        Tom Smeding <tom@tomsmeding.com>
Homepage:               https://github.com/tmcdonell/cuda
Bug-reports:            https://github.com/tmcdonell/cuda/issues
Category:               Foreign
Tested-with:            GHC >= 8.0
Build-type:             Custom

custom-setup
  setup-depends:
      base              >= 4.7  && < 5
    , Cabal             >= 1.24 && < 3.17
    , directory         >= 1.0
    , filepath          >= 1.0

Library
  hs-source-dirs:       src
  exposed-modules:
      -- Runtime API
      Foreign.CUDA.Runtime
      Foreign.CUDA.Runtime.Device
      Foreign.CUDA.Runtime.Error
      Foreign.CUDA.Runtime.Event
      Foreign.CUDA.Runtime.Exec
      Foreign.CUDA.Runtime.Marshal
      Foreign.CUDA.Runtime.Stream
      Foreign.CUDA.Runtime.Utils

  include-dirs:         .
  c-sources:            cbits/stubs.c

  build-tools:          c2hs >= 0.21
  build-depends:
      base              >= 4.7 && < 5
    , bytestring        >= 0.10.4
    , containers
    , cuda
    , filepath          >= 1.0
    , template-haskell
    , uuid-types        >= 1.0

  default-language:     Haskell98

  ghc-options:
      -Wall
      -O2
      -funbox-strict-fields
      -fwarn-tabs
      -fno-warn-unused-imports

  ghc-prof-options:
      -fprof-auto
      -fprof-cafs

  if impl(ghc == 8.0.1)
    cpp-options:        -DCUDA_PRELOAD


source-repository head
    type:               git
    location:           https://github.com/tmcdonell/cuda

source-repository this
    type:               git
    location:           https://github.com/tmcdonell/cuda
    tag:                v0.13.0.0

-- vim: nospell
